[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/game_over.gd" type="Script" id=1]
[ext_resource path="res://Sprites/background.jpg" type="Texture" id=2]
[ext_resource path="res://Sprites/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/UI/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/blue_button10.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/red_button09.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/red_button07.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 8
outline_color = Color( 0.501961, 0.0588235, 0.0588235, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 5
outline_color = Color( 0.243137, 0.447059, 0.623529, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 49, 45 )
margin_left = 3.07357
margin_right = 3.38093
margin_top = 3.07357
margin_bottom = 3.98052

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 49, 45 )
margin_left = 4.9056
margin_right = 4.9056
margin_top = 5.28295
margin_bottom = 4.52824

[sub_resource type="DynamicFont" id=6]
size = 35
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 49, 45 )
margin_left = 4.15089
margin_right = 4.15089
margin_top = 3.77354
margin_bottom = 4.15089

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 49, 45 )
margin_left = 7.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 3 )

[node name="game_over" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="background" type="Sprite" parent="BackgroundLayer"]
position = Vector2( -241.153, 723.458 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="CenterContainer" type="VBoxContainer" parent="."]
margin_top = 295.0
margin_right = 751.0
margin_bottom = 1317.0

[node name="game_over_label" type="Label" parent="CenterContainer"]
margin_right = 751.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 94.0
margin_right = 751.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 20 )
custom_constants/separation = 80

[node name="score_label" type="Label" parent="CenterContainer"]
margin_top = 178.0
margin_right = 751.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 2 )
text = "Your score:"
align = 1
valign = 1

[node name="score" type="Label" parent="CenterContainer"]
margin_top = 250.0
margin_right = 751.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 3 )
text = "00000000000000"
align = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 299.0
margin_right = 751.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 80 )
custom_constants/separation = 80

[node name="play_again" type="Button" parent="CenterContainer"]
margin_left = 225.0
margin_top = 383.0
margin_right = 525.0
margin_bottom = 473.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 6
size_flags_vertical = 0
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Play Again"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 477.0
margin_right = 751.0
margin_bottom = 557.0
rect_min_size = Vector2( 0, 80 )
custom_constants/separation = 80

[node name="quit" type="Button" parent="CenterContainer"]
margin_left = 225.0
margin_top = 561.0
margin_right = 525.0
margin_bottom = 651.0
rect_min_size = Vector2( 300, 90 )
size_flags_horizontal = 6
size_flags_vertical = 0
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "QUIT"
[connection signal="pressed" from="CenterContainer/play_again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="CenterContainer/quit" to="." method="_on_quit_pressed"]
